
2009-05-13 (dazjorz)
 * Replaced statuses "Thanks", "Solved", "Wontfix" and "Invalid" with
 "Closed".
 * Added to install and upgrade script to create a LikeBackResolutions table
 with Thanks, Solved, Wontfix and Invalid, and added a resolutions column to
 the LikeBack table.
 * Added to upgrade script to set status for all closed comments to Closed and
 set the Resolutions column appropriately.
 * Fixed bug in functions.php: for the 'closed' status (and the now invalid
 'thanks' and 'wontfix' statuses), the message is correctly set, instead of
 set to the message belonging to the icon.
 * Added optional $silent argument to db_query() to not output anything if the
 query fails.
 * Added 'icon' column to the Resolutions table.
 * Added validResolutions(), iconForResolution() and messageForResolution()
 function, added $resolutions to Smarty, and added resolutions support to
 Smarty 'message' modifier.
 * Gave comment.php, comment.tpl and newremark.tpl support for switching
 resolutions as well as statuses.

--- LikeBack v1.2 released ---

2009-05-04 (dazjorz)
 * Added resetting all Smarty caches in the upgrade script.
 * Fixed the sendReminders cron script to correctly find itself in the
 LikeBack directory and load all other files, including Smarty templates.
 * Fixed the sendReminders cron script if a developer didn't have his e-mail
 address set.
 * Added LIKEBACK_URL configuration option (the cron script couldn't figure it
 out by itself, of course.)
 * Commented out "you can turn this e-mail off" in reminders.tpl, because you
 can't, yet.
 * Fixed "nothing to change" warning if the comment status wasn't changed and
 the comment wasn't sent to the author.

2009-04-29 (dazjorz)
 * Fixed remaining magic_quotes_gpc workarounds and removed
 fix_magic_quotes.php inclusion.
 * Made options.tpl display both the message and the icon using the 'message'
 modifier.
 * The locale cell is now further away from the type cell on the settings